# QQBot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
awesome_bot/: __init__.py
awesome_bot/plugins/: affinity.py  ai_chat.py  daily_report.py  hello.py  help.py  hotsearch.py  luck.py  plus_one.py  poke.py  remind.py  sign.py  status.py  tools.py  translate.py  welcome.py  wordcloud_plugin.py
