[project]
name = "awesome-qq-bot"
version = "0.1.0"
description = "基于 NoneBot2 的 QQ 机器人"
readme = "README.md"
requires-python = ">=3.9"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["awesome_bot/plugins"]
builtin_plugins = ["echo", "single_session"]
